--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Express-Dev-Skills</title>
-  </head>
-  <body>
-    <h1>Dev-Skills</h1>
-    <ul>
-      <% skills.forEach(function(s) { %>
-      <li>
-        <a href="/skills/<%= s.id %>"> <%= s.skill %> </a>
-        <%= s.skill %> - <%= s.name %> - <%= s.description %> - <%= s.level %>
-      </li>
-      <% }); %>
-    </ul>
-  </body>
-</html>
+<%- include('../partials/header') %>
+
+<h1>Express-Dev-Skills</h1>
+<a href="/skills/new">Add Skill</a>
+
+
+<ul>
+  <% skills.forEach(function(s) { %>
+  <li>
+    <form action="/skills/<%= s.id %>?_method=DELETE" method="POST">
+      <button type="submit">x</button>
+  </form>
+    <a href="/skills/<%= s.id %>"> <%= s.skill %> </a>
+     <%= s.name %> - <%= s.description %> - <%= s.level %>
+  </li>
+  <% }); %>
+</ul>
+
+<%- include('../partials/footer') %>
