--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
+<%- include('../partials/header') %>
+
     <h2><%= skill.skill %></h2>
-    <h3>
-      ID: <%= skill.id %><br />
-      Name: <%= skill.name %><br />
-      Skills: <%= skill.description ? skill.description : 'No description
-      available' %>
-    </h3>
-  </body>
-</html>
+    <h2>
+      ID: <%= skill.id %>
+      Name: <%= skill.name %>
+      Skills: <%= skill.description ? skill.description : 'No description available' %>
+    </h2>
+
+    <a href="/skills/<%= skill.id %>/edit">Edit Skills</a> <br>
+
+    <!-- <form action="/skills/<%= skill.id %>" method="POST">
+      <input type="hidden" name="_method" value="DELETE">
+      <button type="submit" class="btn btn-danger">Delete Skill</button>
+    </form> -->
+  
+    <%- include('../partials/footer') %>
